fix plant-info by adding div class text to allow text to go underneath the picture, aligned and styled container in css

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ body {
 }
 
 img {
-    width: 600px;
+    width: 300px;
+    height: 300px;
 }
 
 .header-logo { background-color: aqua;
@@ -36,12 +37,14 @@ li { color: white;
 
 }
 
-.title { background-color: darkblue;
+.title { background-color: lightgreen;
+    display: flex;
 
 
 }
 
-.title-text { background-color: darkblue;
+.title-text { background-color: lightgreen;
+    display: flex;
 
 
 }
@@ -52,16 +55,25 @@ li { color: white;
 }
 
 .information { background-color: white;
+    justify-content: center;
+    align-items: center;
 
 
 }
 
 .container { background-color: white;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    gap: 50px;
 
 
 }
 
 .plant-info {background-color: white;
+    max-width: 300px;
 
 
 }
